# flaskrtutorial

./: .gitignore  README.rst  app.py  build.sh  pyproject.toml  render.yaml
flaskr/: __init__.py
instance/: flaskr.sqlite
