[tool.poetry]
name = "flaskr"
version = "0.1.0"
description = "An example repo for guidance on deploying Flask apps to Render"
authors = ["Audrey Maldonado"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
Flask = "^2.2.2"
SQLAlchemy = "^1.4.42"
flask-sqlalchemy = "^3.0.2"
gunicorn = "^20.1.0"
whitenoise = {extras = ["brotli"], version = "^6.2.0"}
setuptools = "^65.5.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
